# odoo-kernel

./: CHANGELOG.md  README.rst  hatch_build.py  pyproject.toml  test_echo.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/config/: odoo.conf
.github/workflows/: test.yml
odoo_kernel/: __init__.py  __main__.py  kernel.py  utils.py
