[build-system]
requires = [
    "hatchling>=1.10.0", "ipykernel"
]
build-backend = "hatchling.build"

[project]
name = "odoo-kernel"
dynamic = [
    "version",
]
description = "Odoo kernel for Jupyter"
readme = "README.rst"
license = { file = "LICENSE" }
authors = [
    { name = "Aurelien ROY", email = "roy.aurelien@gmail.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "ipykernel",
    "jupyter_client",
    "odoo-cli @ git+https://github.com/royaurelien/odoo-cli.git@v0.3.0",
]

[project.optional-dependencies]
test = [
  "jupyter_kernel_test",
]

[project.urls]
Homepage = "https://github.com/royaurelien/odoo-kernel"

[tool.hatch.version]
path = "odoo_kernel/__init__.py"

# Used to call hatch_build.py
[tool.hatch.build.hooks.custom]

[tool.hatch.metadata]
allow-direct-references = true


[tool.hatch.build.targets.sdist]
include = [
    "/odoo_kernel",
]

[tool.hatch.build.targets.wheel.shared-data]
"data_kernelspec/share" = "share"

